# SparseDiffPy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml  setup.py
.github/workflows/: build-and-publish.yml
sparsediffpy/_bindings/: bindings.c  dense_matrix_stub.c
sparsediffpy/_bindings/atoms/: const_scalar_mult.h  const_vector_mult.h  constant.h  dense_left_matmul.h  dense_matmul.h  kron_left.h  left_matmul.h  parameter.h  quad_form.h  rel_entr.h  rel_entr_scalar_vector.h  rel_entr_vector_scalar.h  right_matmul.h  scalar_mult.h  vector_mult.h  vstack.h
sparsediffpy/_bindings/problem/: hessian.h  jacobian.h  register_params.h  update_params.h
