[build-system]
requires = ["numpy >= 2.0.0", "setuptools >= 68.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sparsediffpy"
version = "0.1.0"
description = "Python bindings for SparseDiffEngine automatic differentiation"
requires-python = ">=3.11"
dependencies = ["numpy >= 2.0.0"]
license = "Apache-2.0"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["sparsediffpy*"]
