[build-system]
requires = ["scikit-build-core >= 0.10", "numpy >= 2.0.0"]
build-backend = "scikit_build_core.build"

[project]
name = "sparsediffpy"
version = "0.1.6"
description = "Python bindings for SparseDiffEngine automatic differentiation"
requires-python = ">=3.11"
dependencies = ["numpy >= 2.0.0"]
license = "Apache-2.0"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.scikit-build]
cmake.minimum-version = "3.15"
wheel.packages = ["sparsediffpy"]
